# RustParticles

./: 2  Cargo.toml  \
src/: \  lib.rs  main.rs  setup.rs  simulation_parameters.rs
src/components/: particle.rs
src/initialisation/: setup.rs  simulation_parameters.rs
src/systems/: collision_system.rs  mod.rs  particle_spawner_system.rs  update_system.rs
tests/: particle_collisions.rs
