[package]
name = "RustParticles"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking", "wayland"] }
bevy_prototype_lyon = "0.11.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
wgpu = { git = "https://github.com/Friz64/wgpu.git", branch = "v0.19-4967" }
wgpu-types = { git = "https://github.com/Friz64/wgpu.git", branch = "v0.19-4967" }
naga = { git = "https://github.com/Friz64/wgpu.git", branch = "v0.19-4967" }

